# pyvrp-shipment

./: README.md  pyproject.toml
src/pyvrp_shipment/: __init__.py
src/tests/: test_solve.py
tests/: test_solve.py
