[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`pyvrp-shipment` is a package for wrapper for solving shipment in PyVRP"
homepage = "https://github.com/SaitoTsutomu/pyvrp-shipment"
license = "Apache-2.0"
name = "pyvrp-shipment"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.11"
pyvrp = "^0.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers", # マーカースペルミス対応
  "--strict-config", # 設定ミス対応
  "-ra", # サマリー表示
  "-v", # 詳細表示
  "-x", # 失敗時に終了
  "--capture=no", # 標準出力表示
]
testpaths = "tests"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
